package DesignPatterns.BehavioralType.Template;

public class PeanutSoyaMilk extends SoyaMilk {

	@Override
	void addCondiments() {
		System.out.println("2、放入花生 ");
	}
}
