package DesignPatterns.BehavioralType.Template;

public class RedBeanSoyaMilk extends SoyaMilk {

    @Override
    void addCondiments() {
        System.out.println("2、放入红豆 ");
    }
}
